Checkout Management App/objects/BillingPushNotification__c.object
<CustomObject>
    <description>Contains raw Stripe data. Salesforce uses this data to populate object records in the Checkout Management App, like subscriptions and invoices.</description>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventContent__c</fullName>
        <label>Event Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventType__c</fullName>
        <label>Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveMode__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used as a flag for Stripe test webhooks.</description>
        <label>Live Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retries__c</fullName>
        <label>Retries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>None indicates we didn&apos;t process this notification.
Processed indicates that it was successfully processed.
Error indicates there was an error in processing it.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StripeEventIdUnique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Stripe Event Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StripeEventId__c</fullName>
        <externalId>true</externalId>
        <label>Stripe Event Id (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Billing Push Notifications</relationshipLabel>
        <relationshipName>BillingPushNotifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Checkout Billing Push Notification</label>
    <nameField>
        <displayFormat>BPN-{000000}</displayFormat>
        <label>Checkout Billing Push Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Billing Push Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>